--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Container hochladen – mRay AIR</title>
+  <title data-i18n-key="navbar_container_upload">Container hochladen – mRay AIR</title>
   <!-- Keycloak + Auth Schutz -->
   <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
   <script src="../scripts/auth.js" defer></script>
