--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -60,6 +60,41 @@
         </pre>
       </div>
 
+      <!-- LOG-VIEWER (Container-Loganzeige) -->
+      <div class="details-card">
+        <h2 data-i18n-key="logviewer_title">Log-Viewer</h2>
+        <p data-i18n-key="logviewer_text">Hier kannst du Logs eines bestimmten Containers anzeigen.</p>
+        <!-- Container-Auswahl -->
+        <div style="margin-bottom: 1rem;">
+          <label for="container-select">Container auswählen:</label>
+          <select id="container-select"></select>
+        </div>
+        <!-- Status & Health -->
+        <div style="margin-bottom: 1rem;">
+          <strong>Status:</strong> <span id="container-status">-</span> |
+          <strong>Health:</strong> <span id="container-health">-</span>
+        </div>
+        <!-- Log-Anzeige Optionen -->
+        <div style="margin-bottom: 1rem;">
+          <label><input type="checkbox" id="chk-stdout" checked> STDOUT</label>
+          <label><input type="checkbox" id="chk-stderr" checked> STDERR</label>
+          <label><input type="checkbox" id="chk-timestamps"> Zeitstempel</label>
+          <label>Zeilen:
+            <input type="number" id="log-tail" value="100" min="10" max="1000" step="10" style="width: 80px;">
+          </label>
+          <button onclick="loadLogs()">Logs laden</button>
+        </div>
+        <!-- Container-Log-Ausgabe -->
+        <pre id="log-output"
+              style="max-height: 300px; overflow-y: auto; background-color: #1c1c1c; color: #00ffcc;
+                     padding: 1rem; font-size: 0.85rem; border: 1px solid #444; border-radius: 6px;">
+        </pre>
+      </div>
+    </div>
+  </main>
+
+  <footer>© mRay</footer>
+
   <!-- Scriptler -->
   <script src="../scripts/i18n.js"></script>
   <script src="../scripts/dashboard.js?v=20250602"></script>
